Try to fix z-index problem

--- a/packages/pxweb2/src/app/components/NavigationDrawer/NavigationDrawer.module.scss
+++ b/packages/pxweb2/src/app/components/NavigationDrawer/NavigationDrawer.module.scss
@@ -10,11 +10,12 @@
   background: var(--px-color-background-subtle);
   overflow-y: auto;
 
-  @media (min-width: fixed.$breakpoints-xsmall-min-width) and (max-width: fixed.$breakpoints-xsmall-max-width) {
-    width: calc(100vw - 40px);
-    max-width: 396px;
-    padding: fixed.$spacing-4;
-  }
+  // @media (min-width: fixed.$breakpoints-xsmall-min-width) and (max-width: fixed.$breakpoints-xsmall-max-width) {
+  //   width: calc(100vw - 40px);
+  //   max-width: 396px;
+  //   padding: fixed.$spacing-4;
+  //   z-index: 70;
+  // }
 
   @media ((min-width: fixed.$breakpoints-small-min-width) and (max-width: fixed.$breakpoints-medium-max-width)) {
     width: 428px;
@@ -36,7 +37,7 @@
     // Not from Figma
     position: sticky;
     top: fixed.$spacing-19;
-    z-index: 10;
+    z-index: 70;
   }
 
   @media (min-width: fixed.$breakpoints-medium-min-width) and (max-width: fixed.$breakpoints-medium-max-width) {
@@ -50,7 +51,7 @@
     // Not from Figma
     position: sticky;
     top: fixed.$spacing-20;
-    z-index: 10;
+    z-index: 60;
   }
 
   // large
@@ -71,7 +72,7 @@
     position: sticky;
     top: fixed.$spacing-20;
     inset-inline-start: 120px; // Instead of "left" to handle rtl languages
-    z-index: 10;
+    z-index: 60;
 
     // // Position NavigationDrawer below the header
     // top: fixed.$spacing-22;
@@ -93,7 +94,7 @@
 
     position: sticky;
     top: fixed.$spacing-20;
-    z-index: 10;
+    z-index: 60;
 
     &.skipToMainContentVisible {
       // Calculate position of NavigationDrawer below the header and SkipToMainContent
@@ -171,7 +172,7 @@
     width: 100%;
     height: 100%;
     background-color: var(--px-color-surface-scrim);
-    z-index: 999;
+    z-index: 50;
   }
 }
 
